--- a/client/shopping/package.json
+++ b/client/shopping/package.json
@@ -2,6 +2,7 @@
   "name": "shopping",
   "version": "0.1.0",
   "private": true,
+  "main": "http://localhost:3000/static/media/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,6 +11,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
